--- a/public/css/table.css
+++ b/public/css/table.css
@@ -125,19 +125,12 @@ table, tr, td, th{
   border: none;
 }
 
-.content-table{
-  overflow-x: scroll;
-}
-
 tr{
   border-bottom:1px solid var(--grey);
 }
 
 .content-table{
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow-x: scroll;
 }
 
 .btn{
@@ -187,4 +180,27 @@ tr{
   align-items: center;
   width: 100%;
   height: 3rem;
+}
+
+@media screen and (max-width:767px){
+.btn{
+  border: none;
+  color: white;
+  padding: .25rem .5rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+}
+}
+@media screen and (max-width:259px){
+.btn{
+  border: none;
+  color: white;
+  padding: .125rem .25rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+}
 }
